; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_ignore_xlsx_update.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_ignore_xlsx_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"*.xlsx\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ignore_xlsx_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ignore_xlsx_update(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = call i32* @g_pattern_spec_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %6, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @g_pattern_match_string(i32* %9, i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @g_pattern_match_string(i32* %14, i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %13
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %18, %13, %2
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @g_pattern_spec_free(i32* %21)
  %23 = load i32, i32* %6, align 4
  ret i32 %23
}

declare dso_local i32* @g_pattern_spec_new(i8*) #1

declare dso_local i64 @g_pattern_match_string(i32*, i8*) #1

declare dso_local i32 @g_pattern_spec_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
